@@ -12971,29 +12971,22 @@ name|WatchedEvent
 name|event
 parameter_list|)
 block|{
+comment|// session events are not change events, and do not remove the watcher
 if|if
 condition|(
-name|event
-operator|.
-name|getState
-argument_list|()
-operator|==
 name|Event
 operator|.
-name|KeeperState
+name|EventType
 operator|.
-name|Disconnected
-operator|||
+name|None
+operator|.
+name|equals
+argument_list|(
 name|event
 operator|.
-name|getState
+name|getType
 argument_list|()
-operator|==
-name|Event
-operator|.
-name|KeeperState
-operator|.
-name|Expired
+argument_list|)
 condition|)
 block|{
 return|return;
